--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 CONNECTION_URL = mongodb+srv://jaylawrence:7sdM0DWZeln5Ufb1@movieapp.qqetypl.mongodb.net/?retryWrites=true&w=majority
+
+TOKEN_KEY=test
