--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
+    "store2": "^2.14.2",
     "timeago.js": "^4.0.2"
   }
 }
